[td] Update arcane library

--- a/docs/developer-ux/applications/arcane-library.mdx
+++ b/docs/developer-ux/applications/arcane-library.mdx
@@ -1,7 +1,7 @@
 ---
-title: "The Arcane Library, as endless as it is timeless."
-sidebarTitle: "Arcane Library"
-description: "Gain eternal knowledge in the infinite halls of the Arcane Library."
+title: "The Text Editor, as endless as it is timeless."
+sidebarTitle: "Text Editor"
+description: "Gain eternal knowledge in the infinite halls of the Text Editor."
 icon: "scroll"
 iconType: "duotone"
 "og:image": "https://i.pinimg.com/originals/f7/b7/4c/f7b74c5bc9680c63bb749c63ab5d5f19.gif"
@@ -12,7 +12,7 @@ This application is the file browser,code editor, and file versions self-contain
 <Frame>
     <p align="center">
     <img
-        alt="The Arcane Library is the file browser and the code editor self-contained in a single application."
+        alt="The Text Editor is the file browser and the code editor self-contained in a single application."
         src="https://github.com/mage-ai/assets/raw/main/dev-ux/applications/arcane-library/overview.gif?raw=true"
     />
     </p>
