--- a/docs/developer-ux/applications/overview.mdx
+++ b/docs/developer-ux/applications/overview.mdx
@@ -136,7 +136,7 @@ its original size and position.
 
 ## Available applications
 
-<Card title="Arcane Library" icon="scroll" iconType="duotone" color="#7D55EC">
+<Card title="Text Editor" icon="scroll" iconType="duotone" color="#7D55EC">
     This is the file browser and the code editor self-contained in a single application.
     <br />
     `[beta]`
