--- a/docs/developer-ux/command-center/spellcaster.mdx
+++ b/docs/developer-ux/command-center/spellcaster.mdx
@@ -307,7 +307,7 @@ These applications can be used simultaneously throughout your journey in Mage.
 
 Currently supported applications:
 
-<Card title="Arcane Library" icon="scroll" iconType="duotone" color="#7D55EC">
+<Card title="Text Editor" icon="scroll" iconType="duotone" color="#7D55EC">
     This is the file browser and the code editor self-contained in a single application.
 </Card>
 
