--- a/docs/developer-ux/file-browser.mdx
+++ b/docs/developer-ux/file-browser.mdx
@@ -21,7 +21,7 @@ icon: "files"
 
 1. When editing a pipeline, expand the left side panel to show the file browser.
 2. Go to the Files page [http://localhost:6789/files](http://localhost:6789/files).
-3. Launch the Arcane Library application.
+3. Launch the Text Editor application.
 
 ---
 
@@ -180,7 +180,7 @@ the file browser. Non-block files may still be visible when this filter is appli
 ## Display files by type
 
 <Note>
-    The feature is currently only available in the <b>Arcane Library</b> application
+    The feature is currently only available in the <b>Text Editor</b> application
 </Note>
 
 Instead of viewing all files grouped by its parent directory, 
