--- a/docs/developer-ux/overview.mdx
+++ b/docs/developer-ux/overview.mdx
@@ -25,5 +25,5 @@ icon: "superpowers"
 1. Command Center (aka Spellcaster)
     1. Version Control mode
 1. Applications
-    1. Arcane Library (aka Files)
+    1. Text Editor (aka Files)
     1. Portal Terminal (aka Terminal)
