--- a/docs/production/configuring-production-settings/compute-resource.mdx
+++ b/docs/production/configuring-production-settings/compute-resource.mdx
@@ -234,7 +234,7 @@ Required IAM permissions for using ECS executor:
 
 ### GCP Cloud Run executor
 
-If your Mage app is deployed on GCP, you can choose to launch separate GCP Cloud Run jobs to execute blocks.
+If your Mage app is deployed on GCP Cloud Run, you can choose to launch separate GCP Cloud Run jobs to execute blocks.
 
 How to configure pipeline to use GCP cloud run executor:
 1. Update Project's metadata.yaml
