[xy] Update doc

--- a/docs/development/variables/environment-variables.mdx
+++ b/docs/development/variables/environment-variables.mdx
@@ -82,6 +82,7 @@ These are the environment variables used in Mage.
 | `LDAP_GROUP_FIELD`              | [More information](/production/authentication/overview#ldap)                                                                                                    | See link                                                                 |
 | `LDAP_ROLES_MAPPING`            | [More information](/production/authentication/overview#ldap)                                                                                                    | See link                                                                 |
 | `LDAP_DEFAULT_ACCESS`           | [More information](/production/authentication/overview#ldap)                                                                                                    | See link                                                                 |
+| `LOGS_DIR_PATH`                 | Override the logs directory path. Default path is the variables_dir path (e.g. `/home/src/mage_data/`)                                                          | `/home/src/logs_dir`                                                     |
 | `MAGE_ACCESS_TOKEN_EXPIRY_TIME` | [More information](/production/authentication/overview#ldap)                                                                                                    | See link                                                                 |
 | `MAGE_BASE_PATH`                | The base path or prefix of the Mage server url. [More information](/getting-started/setup#setting-prefix-for-mage-url)                                          | `base/path`                                                              |
 | `MAGE_REQUESTS_BASE_PATH`       | [More information](/getting-started/setup#setting-prefix-for-mage-url)                                                                                          | `base/path`                                                              |
