--- a/docs/about/roadmap.mdx
+++ b/docs/about/roadmap.mdx
@@ -8,3 +8,5 @@ title: "Roadmap"
 >
   Mage's 2024 Roadmap coming soon!
 </Card>
+
+<iframe class="airtable-embed" src="https://airtable.com/embed/applEuqJsK4zF5yJK/shrJctaGt4tvU27uF?backgroundColor=red&viewControls=on" frameborder="0" onmousewheel="" width="100%" height="533" style="background: transparent; border: 1px solid #ccc;"></iframe>
