--- a/docs/orchestration/triggers/schedule-pipelines.mdx
+++ b/docs/orchestration/triggers/schedule-pipelines.mdx
@@ -57,6 +57,17 @@ should complete:
 
 ## Extra runtime variables from pipeline run
 
+Default runtime variables from pipeline run:
+
+| Key | Description | Example |
+| --- | --- | --- |
+| `env` | The value is always `prod` in pipeline runs. The value is `dev` when running blocks in notebook. | `prod` |
+| `event` | If the pipeline is triggered by event, the event variable contains the event payload. | `{"key1": "value1"}` |
+| `execution_date` | A datetime object that the pipeline is executed at. | `86400` |
+| `execution_partition` | An automatically formatted partition of the pipeline run using the execution date. | `10/20231225T122520` |
+| `pipeline_run_id` | The id of the pipeline run. | `10` |
+
+
 If your pipeline run belongs to a trigger that is scheduled, then the following extra
 variables are available in your Python block’s keyword arguments (e.g. `kwargs`).
 
