--- a/docs/guides/setup-dbt.mdx
+++ b/docs/guides/setup-dbt.mdx
@@ -39,7 +39,7 @@ docker compose up
 ```
 </CodeGroup>
 
-After running the above command, you'll see the Mage overview page. Click the pipelines icon on the left to enter the pipelines overview.
+After running the above command, open the Mage overview page at http://localhost:6789. Click the pipelines icon on the left to enter the pipelines overview.
 
 ![Open Pipelines](https://github.com/mage-ai/assets/blob/main/dbt/setup-dbt/go-to-pipelines.gif?raw=True)
 
