--- a/docs/contributing/frontend/overview.mdx
+++ b/docs/contributing/frontend/overview.mdx
@@ -4,10 +4,10 @@ sidebarTitle: "Overview"
 description: "Guides on adding features to the front-end client."
 ---
 
-| | |
-| --- | --- |
-| Language | TypeScript |
-| Framework | React, Next.js |
+|                |                     |
+| -------------- | ------------------- |
+| Language       | TypeScript          |
+| Framework      | React, Next.js      |
 | Code directory | `mage_ai/frontend/` |
 
 ## Style guide
@@ -15,8 +15,16 @@ description: "Guides on adding features to the front-end client."
 Mage follows the [Airbnb JavaScript style guide](https://airbnb.io/javascript/react/).
 
 ### Linter
+
 To run the linter locally, execute this script:
 
 ```bash
 ./scripts/test.sh
+```
+
+## Setup
+
+```bash
+yarn global add eslint-config-next
+yarn global add eslint_d
 ```
