--- a/docs/production/configuring-production-settings/compute-resource.mdx
+++ b/docs/production/configuring-production-settings/compute-resource.mdx
@@ -107,7 +107,7 @@ in this project. Example config:
   ```
   Please make sure the [GPU driver](https://kubernetes.io/docs/tasks/manage-gpus/scheduling-gpus/#using-device-plugins)
   is installed and run on your nodes to use the GPUs.
-* To futher customize the container config of the kubernetes executor, you can sepcify the `container_config` in the k8s executor config. Here is the example:
+* To further customize the container config of the kubernetes executor, you can sepcify the `container_config` or `job_config` in the k8s executor config. Here is the example:
   ```yaml
   k8s_executor_config:
     container_config:
@@ -115,6 +115,10 @@ in this project. Example config:
       env:
       - name: USER_CODE_PATH
         value: /home/src/k8s_project
+    job_config:
+      active_deadline_seconds: 120
+      backoff_limit: 3
+      ttl_seconds_after_finished: 86400
   ```
 3. You can configure the job template by using the `K8S_CONFIG_FILE` environment variable, which should point to the configuration file. Here is the format for the Kubernetes configuration template:
 
