[tc] Update releases.mdx
Updated with embed link

--- a/docs/about/releases.mdx
+++ b/docs/about/releases.mdx
@@ -18,7 +18,7 @@ description: "Latest new features and changelog."
 <iframe
   width="560"
   height="315"
-  src="https://youtu.be/rAp7psCTxC8?si=A4BtcYWuiQJF1R8x"
+  src="https://www.youtube.com/embed/rAp7psCTxC8?si=A4BtcYWuiQJF1R8x"
   title="YouTube video player"
   frameborder="0"
   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
