--- a/docs/about/releases.mdx
+++ b/docs/about/releases.mdx
@@ -14,8 +14,17 @@ description: "Latest new features and changelog."
 ---
 
 [All releases](https://github.com/mage-ai/mage-ai/releases)
+- [0.9.70 | Fallout Release](https://github.com/mage-ai/mage-ai/releases/tag/0.9.70)
+<iframe
+  width="560"
+  height="315"
+  src="https://www.youtube.com/embed/rAp7psCTxC8?si=A4BtcYWuiQJF1R8x"
+  title="YouTube video player"
+  frameborder="0"
+  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+  allowfullscreen
+></iframe>
 - [0.9.68 | Invincible Release](https://github.com/mage-ai/mage-ai/releases/tag/0.9.68)
-
 <iframe
   width="560"
   height="315"
