docs: fix markdown formatting
Added missing backtick in Algolia integration docs page.

--- a/docs/integrations/databases/Algolia.mdx
+++ b/docs/integrations/databases/Algolia.mdx
@@ -17,7 +17,7 @@ default:
 
 ## Required Algolia Libraries
 
-Add `algoliasearch==3.0.0 into `requirements.txt` to install the required weaviate library.
+Add `algoliasearch==3.0.0` into `requirements.txt` to install the required weaviate library.
 
 ## Integration using Python Blocks
 
