--- a/docs/contributing/styling.mdx
+++ b/docs/contributing/styling.mdx
@@ -1,3 +1,7 @@
 eslint_d --fix Dockerfile dev.Dockerfile docker-compose.yml docs/contributing/frontend/overview.mdx mage_ai/frontend/utils/hooks/useAbortController.ts mage_ai/frontend/utils/hooks/useDebounce.ts mage_ai/frontend/.eslintrc.js mage_ai/frontend/components/BlockLayout/BlockLayoutItem/index.tsx mage_ai/frontend/components/BlockLayout/index.tsx mage_ai/frontend/components/BlockSettings/index.tsx mage_ai/frontend/components/ChartBlock/ChartController.tsx mage_ai/frontend/components/ChartBlock/constants.ts mage_ai/frontend/components/ChartBlock/index.tsx mage_ai/frontend/components/CodeBlock/CodeOutput/MultiOutput.tsx mage_ai/frontend/components/CodeBlock/CodeOutput/index.style.tsx mage_ai/frontend/components/CodeBlock/CodeOutput/index.tsx mage_ai/frontend/components/DataTable/index.tsx mage_ai/frontend/components/PipelineDetail/BlockRuns/buildTableSidekick.tsx mage_ai/frontend/components/PipelineDetail/Settings/index.tsx mage_ai/frontend/components/PipelineDetail/utils.ts mage_ai/frontend/interfaces/BlockLayoutItemType.ts mage_ai/frontend/interfaces/ChartBlockType.ts mage_ai/frontend/interfaces/KernelOutputType.ts mage_ai/frontend/interfaces/PipelineType.ts mage_ai/frontend/next.config.js mage_ai/frontend/oracle/components/Tabs/ButtonTabs/index.tsx mage_ai/frontend/oracle/elements/Button/KeyboardShortcutButton.tsx mage_ai/frontend/oracle/elements/Button/KeyboardShortcutWrapper.tsx mage_ai/frontend/package.json mage_ai/frontend/utils/string.ts mage_ai/frontend/yarn.lock pyproject.toml scripts/dev.sh
 
 black ...
+
+git status --porcelain | grep '^[AM?]' | cut -c4- | grep '\.py$' | xargs black
+
+git status --porcelain | grep '^[AM?]' | cut -c4- | grep '\.\(js\|jsx\|ts\|tsx\)$' | xargs eslint_d --fix
