--- a/docs/production/deploying-to-cloud/aws/terraform-apply-policy.mdx
+++ b/docs/production/deploying-to-cloud/aws/terraform-apply-policy.mdx
@@ -10,6 +10,8 @@ sidebarTitle: "Apply policies"
     {
       "Effect": "Allow",
       "Action": [
+        "application-autoscaling:DescribeScalingPolicies",
+        "cloudwatch:GetMetricData",
         "ec2:AssociateRouteTable",
         "ec2:AttachInternetGateway",
         "ec2:AuthorizeSecurityGroupEgress",
@@ -37,18 +39,36 @@ sidebarTitle: "Apply policies"
         "ec2:RevokeSecurityGroupEgress",
         "ec2:RevokeSecurityGroupEgress",
         "ec2:RevokeSecurityGroupIngress",
+        "ecr:BatchCheckLayerAvailability",
+        "ecr:CompleteLayerUpload",
+        "ecr:CreateRepository",
+        "ecr:DescribeImages",
+        "ecr:DescribeRepositories",
+        "ecr:GetAuthorizationToken",
+        "ecr:GetRegistryScanningConfiguration",
+        "ecr:InitiateLayerUpload",
+        "ecr:PutImage",
+        "ecr:TagResource",
+        "ecr:UploadLayerPart",
         "ecs:CreateCluster",
         "ecs:CreateService",
         "ecs:DescribeClusters",
         "ecs:DescribeServices",
         "ecs:DescribeTaskDefinition",
+        "ecs:ListAccountSettings",
+        "ecs:ListClusters",
+        "ecs:ListServices",
         "ecs:RegisterTaskDefinition",
+        "ecs:TagResource",
+        "ecs:UpdateService",
         "elasticfilesystem:CreateFileSystem",
+        "elasticfilesystem:CreateMountTarget",
         "elasticfilesystem:CreateMountTarget",
         "elasticfilesystem:DescribeFileSystems",
         "elasticfilesystem:DescribeLifecycleConfiguration",
         "elasticfilesystem:DescribeMountTargetSecurityGroups",
         "elasticfilesystem:DescribeMountTargets",
+        "elasticfilesystem:TagResource",
         "elasticfilesystem:UpdateFileSystem",
         "elasticloadbalancing:AddTags",
         "elasticloadbalancing:CreateListener",
@@ -80,6 +100,7 @@ sidebarTitle: "Apply policies"
         "lambda:ListVersionsByFunction",
         "logs:CreateLogGroup",
         "logs:DescribeLogGroups",
+        "logs:FilterLogEvents",
         "logs:ListTagsLogGroup",
         "logs:TagResource",
         "rds:AddTagsToResource",
@@ -88,26 +109,7 @@ sidebarTitle: "Apply policies"
         "rds:DescribeDBInstances",
         "rds:DescribeDBSubnetGroups",
         "rds:ListTagsForResource",
-        "rds:ModifyDBInstance",
-        "ecr:CreateRepository",
-        "ecr:DescribeRepositories",
-        "ecr:GetRegistryScanningConfiguration",
-        "ecs:ListClusters",
-        "elasticfilesystem:TagResource",
-        "elasticfilesystem:CreateMountTarget",
-        "ecs:ListServices",
-        "cloudwatch:GetMetricData",
-        "logs:FilterLogEvents",
-        "application-autoscaling:DescribeScalingPolicies",
-        "ecs:ListAccountSettings",
-        "ecs:UpdateService",
-        "ecr:GetAuthorizationToken",
-        "ecr:PutImage",
-        "ecr:InitiateLayerUpload",
-        "ecr:UploadLayerPart",
-        "ecr:CompleteLayerUpload",
-        "ecr:BatchCheckLayerAvailability",
-        "ecr:DescribeImages"
+        "rds:ModifyDBInstance"
       ],
       "Resource": "*"
     }
