--- a/docs/production/configuring-production-settings/compute-resource.mdx
+++ b/docs/production/configuring-production-settings/compute-resource.mdx
@@ -34,11 +34,15 @@ Mage provides multiple executors to execute blocks. Here are the available execu
   * `ecs`
   * `k8s`
 
-Mage uses `local_python` executor type by default. If you want to specify another executor_type as the default executor type for blocks,
+
+**Set executor type for all blocks**: Mage uses `local_python` executor type by default. If you want to specify another executor_type as the default executor type for blocks,
 you can set the environment variable `DEFAULT_EXECUTOR_TYPE` to one executor type mentioned above.
 
-If you want to use `local_python` executor when `DEFAULT_EXECUTOR_TYPE` is set to another executor type, you can set the `executor_type` to 
+**Set executor type for all blocks in a pipeline**: You can set the executor type for all the blocks in a pipeline by specifying the `executor_type` at pipeline level.
+
+**Force local python executor**: If you want to use `local_python` executor when `DEFAULT_EXECUTOR_TYPE` is set to another executor type, you can set the `executor_type` to 
 `local_python_force`.
+
 
 ### Local python executor
 
@@ -99,6 +103,7 @@ in this project. Example config:
       service_account_name: default
     ```
 * The kubernetes job name is in this format: `mage-{job_name_prefix}-block-{block_run_id}`. The default `job_name_prefix` is `data-prep`. You can customize it in the k8s executor config.
+  You can interpolate the trigger name in the `job_name_prefix` field with the format `{trigger_name}`
 * If you want to use GPU resource in your k8s executor, you can configure the GPU resource in the `k8s_executor_config` like
   ```yaml
   k8s_executor_config:
@@ -175,8 +180,8 @@ container:
 You can choose to launch separate AWS ECS tasks to executor blocks by specifying
 block executor_type to be `ecs` in pipeline's metadata.yaml file.
 
-There're 2 ways to customize the compute resource of ECS executor,
-1. Update `cpu` and `memory` the `ecs_config` in project's metadata.yaml file. Example config:
+There're 2 ways to customize the ECS executor config,
+1. Specify the `ecs_config` in project's metadata.yaml file. Example config:
     ```yaml
     ecs_config:
       cpu: 1024
@@ -207,13 +212,17 @@ name: example_pipeline
 ...
 ```
 
-#### Extra fields
+#### Config fields
 
 | Field name              | Description                                                                                                                                            | Example values              |
 | ----------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------ | --------------------------- |
 | assign_public_ip        | Whether to assign public IP to the ECS task.                                                                                                           | true/false (default: true)  |
+| cpu                     | The CPU allocated to the ECS task.                                                                                                                     | 1024                        |
 | enable_execute_command  | Whether to [enable execute command for debugging](https://docs.aws.amazon.com/AmazonECS/latest/developerguide/ecs-exec.html)                           | true/false (default: false) |
-| wait_timeout            | The maximum wait time for the ECS task (in seoncds). The default wait timeout for the ECS task is 10 minutes. Setting to -1 will disable waiting. | 1200 (default: 600)         |
+| launch_type             | The launch type of the ECS task.                                                                                                                       | FARGATE                     |
+| memory                  | The memory allocated to the ECS task.                                                                                                                  | 2048                        |
+| tags                    | The tags of the ECS task.                                                                                                                              | ['tag1', 'tag2']            |
+| wait_timeout            | The maximum wait time for the ECS task (in seoncds). The default wait timeout for the ECS task is 10 minutes. Setting to -1 will disable waiting.      | 1200 (default: 600)         |
 
 Example config
 ```yaml
