--- a/docs/production/custom-docker-image/non-root-user.mdx
+++ b/docs/production/custom-docker-image/non-root-user.mdx
@@ -4,7 +4,7 @@ description: "Run Mage docker image as non-root user to restrict access to the s
 ---
 
 By default, the official Mage docker images in DockerHub are using the root users. For production deployment,
-it's reocmmended to use non-root users in the docker image to restict the access to the system for better security.
+it's recommended to use non-root users in the docker image to restrict access to the system for better security.
 Here is the Dockerfile template that you can use to build your custom docker image that runs Mage as non-root user.
 
 ```dockerfile
