Update dbt connectors docs to include dbt-mysql

--- a/docs/dbt/overview.mdx
+++ b/docs/dbt/overview.mdx
@@ -81,6 +81,7 @@ Monitor your dbt pipelines and get alerted when things break.
 1. `dbt-core`
 1. `dbt-dremio`
 1. `dbt-duckdb`
+1. `dbt-mysql`
 1. `dbt-postgres`
 1. `dbt-redshift`
 1. `dbt-snowflake`
