--- a/docs/integrations/databases/S3.mdx
+++ b/docs/integrations/databases/S3.mdx
@@ -11,7 +11,12 @@ title: "S3"
 3. Scroll down and click on a file named `io_config.yaml`.
 4. Enter the following keys and values under the key named `default` (you can
    have multiple profiles, add it under whichever is relevant to you)
-   `yaml version: 0.1.1 default: AWS_ACCESS_KEY_ID: ... AWS_SECRET_ACCESS_KEY: ... `
+   ```yaml
+   version: 0.1.1
+   default:
+     AWS_ACCESS_KEY_ID: ...
+     AWS_SECRET_ACCESS_KEY: ...
+   ```
 
 <br />
 
