--- a/docs/_snippets/debugging-backend.mdx
+++ b/docs/_snippets/debugging-backend.mdx
@@ -11,3 +11,9 @@ Attach to running container to use debugger. To get the container ID, run
 ```bash
 docker attach [container_id]
 ```
+
+# Snippets
+
+```python
+print(self.__dict__, locals()
+```
