--- a/docs/platform/projects/management.mdx
+++ b/docs/platform/projects/management.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Multi-project platform"
+title: "Multi-project platform (beta)"
 sidebarTitle: ""
 description: "Manage infinite number of Mage and non-Mage projects from a single running Mage application."
 icon: "layer-group"
