--- a/docs/contributing/frontend/themes.mdx
+++ b/docs/contributing/frontend/themes.mdx
@@ -1,4 +1,5 @@
-const example = {
+```json
+{
   'workbench.colorCustomizations': {
     // Contrast Colors - The contrast colors are typically only set for high contrast themes. If set, they add an additional border around items across the UI to increase the contrast.
     'contrastActiveBorder': '',
@@ -277,6 +278,5 @@ const example = {
     'gitDecoration.ignoredResourceForeground': '',
     'gitDecoration.conflictingResourceForeground': '',
   },
-};
-
-export default example;
+}
+```
