[xy] Update docs.

--- a/docs/production/authentication/overview.mdx
+++ b/docs/production/authentication/overview.mdx
@@ -81,6 +81,15 @@ Here are the default credentials for the owner user to sign in with:
 | Email | `admin@admin.com` |
 | Password | `admin` |
 
+<Note>
+    Available in versions >= `0.9.72`
+</Note>
+
+To customize the email, password and username of the default owner user, you can configure these environment variables:
+* `DEFAULT_OWNER_EMAIL`
+* `DEFAULT_OWNER_PASSWORD`
+* `DEFAULT_OWNER_USERNAME`
+
 ## Sign in page
 
 Before using Mage, users will have to sign in at `/sign-in`. If you go to a page that requires
