[cf] added link to backfill guide

--- a/docs/orchestration/backfills/guides.mdx
+++ b/docs/orchestration/backfills/guides.mdx
@@ -15,3 +15,5 @@ description: "How to create a backfill."
 1. Enter an interval unit; this value is multiplied by the interval type to determine how many pipeline runs to create.
 1. Click the button labeled <b>Save changes</b>.
 1. Once the backfill is successful saved, click the button labeled <b>Start backfill</b>.
+
+Check out this [blog article](https://www.mage.ai/blog/backfilling-historical-data-using-mage) for more details!
