[tc] Update community-examples.mdx

--- a/docs/guides/community-examples.mdx
+++ b/docs/guides/community-examples.mdx
@@ -68,3 +68,16 @@ Arul discusses the process of constructing an ETL (extract-transform-load) pipel
   allowfullscreen
 ></iframe>
 
+### Apache Airflow Vs. Mage.AI! Apache and Mage.AI Compared for Data Orchestration!
+
+The Data Guy compares and contrasts Apache Airflow and Mage.AI!
+
+<iframe
+  width="560"
+  height="315"
+  src="https://www.youtube.com/embed/fbIeCxtdcEg"
+  title="YouTube video player"
+  frameborder="0"
+  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+  allowfullscreen
+></iframe>
