moved introduction to description

--- a/docs/orchestration/global-hooks/guides.mdx
+++ b/docs/orchestration/global-hooks/guides.mdx
@@ -1,8 +1,8 @@
 ---
 title: Global Hooks Guide
 sidebarTitle: "Guide"
+description: "Follow this step by step guide on creating a global hook in Mage."
 ---
-Follow this step by step guide on creating a global hook in Mage.
 <img
   alt="Penguin Fishing"
   src="https://github.com/mage-ai/assets/blob/main/penguin_fishing.gif?raw=True"
