--- a/docs/orchestration/global-hooks/overview.mdx
+++ b/docs/orchestration/global-hooks/overview.mdx
@@ -1,9 +1,8 @@
 ---
 title: Global Hooks
 sidebarTitle: "Overview"
+description: "Global Hooks are a powerful feature in Mage that allows you to execute custom functions before or after an API request. These hooks can be used to perform additional operations, validate data, or integrate with external systems."
 ---
-Global Hooks are a powerful feature in Mage that allows you to execute custom functions before or after an API request. These hooks can be used to perform additional operations, validate data, or integrate with external systems.
-
 <img
   alt="Hook"
   src="https://github.com/mage-ai/assets/blob/main/Hook.gif?raw=True"
