added nits to docs

--- a/docs/orchestration/global-hooks/guides.mdx
+++ b/docs/orchestration/global-hooks/guides.mdx
@@ -11,9 +11,9 @@ description: "Follow this step by step guide on creating a global hook in Mage."
 ### <b>Step 1: Navigate to the Global Hooks UI</b>
 1. Log in to your Mage account.
 <Note>
-If you are new to Mage follow these steps to enable Global Hooks:
-1. From the Dashboard UI click Pipelines from the left navigation pane
-2. Once in the Pipelines UI click click Settings from the left navigation pane
+If you are new to Mage, follow these steps to enable Global Hooks:
+1. From the Dashboard UI, click Pipelines from the left navigation pane
+2. Once in the Pipelines UI, click click Settings from the left navigation pane
 3. Scroll down to view the features settings and toggle on Global Hooks
 </Note>
 2. Click on Global Hooks in the left navigation pane
@@ -35,7 +35,7 @@ Once the "Create new global Hook" button is clicked the rest of the configuratio
 10. **Valid Code Snapshot**: Click the "Create Snapshot of code" button to validate the pipeline code.
 
 <Note>
- When making a code change to the pipeline, you have to re-validate the global hook by clicking the snapshot button
+ When making a code change to the pipeline, you have to re-validate the global hook by clicking the "Create snapshot" button
 </Note>
 
 11. **Stop Operation if Hook Fails Toggle**: Toggle on if you want to stop the operation from running if the hook fails.
@@ -45,9 +45,9 @@ Once the "Create new global Hook" button is clicked the rest of the configuratio
 Toggling on the history and logging feature will significantly degrade performance of the of the operations resolution time.
 </Note>
 13. **Run Hook Asynchronously:** Enable this setting to run hooks asynchronously and not block the current resource operation from resolving
-14. **Block Outputs**: To select block output features Click the "+ Add block outputs" button
-15. **Block to Extract Data From**: If needed select the block data will be merge from into the hook operation’s data.
-16. **Object to Merge Block into data**: If needed select the type of data that will be merged into the hook operation’s data.
+14. **Block Outputs**: To select block output features, Click the "+ Add block outputs" button
+15. **Block to Extract Data From**: If needed, select the block data will be merge from into the hook operation’s data.
+16. **Object to Merge Block into data**: If needed, select the type of data that will be merged into the hook operation’s data.
 17. **Additional Dictionary Keys**: Enter information into this field if you have nested objects in your block.
 
 ### **Step 3: Save and Test the Hook**
