--- a/docs/orchestration/global-hooks/overview.mdx
+++ b/docs/orchestration/global-hooks/overview.mdx
@@ -37,14 +37,14 @@ The Targeting Condition fields in the Global Hooks UI allows you to specify a se
 
 ### Code to Run
 
-When a hook is triggered it will execute the pipeline that as selected in the pipeline to execute dropdown.
+When a hook is triggered, it will execute the pipeline that was selected in the pipeline to execute dropdown.
 
 **Pipeline to Execute:** The pipeline that will be executed when the hook is triggered.
 
 **Valid Code Snapshot:** A snapshot of the pipeline code that validates the hook before it runs.
 
 <Note>
-When making a code change to the pipeline, you have to re-validate the global hook by clicking the snapshot button
+When making a code change to the pipeline, you have to re-validate the global hook by clicking the "Create snapshot" button
 </Note>
 
 ### How to Run a Hook
