updates for embedded links

--- a/docs/production/deploying-to-cloud/secrets/AWS.mdx
+++ b/docs/production/deploying-to-cloud/secrets/AWS.mdx
@@ -8,7 +8,7 @@ description: "Attention Magers: This classified document contains vital intel on
 
 Before you can use AWS Secrets Manager with Mage, you need to create a new secret in the AWS Secrets Manager console. Follow these steps:
 
-1. Open the AWS Secrets Manager console: https://console.aws.amazon.com/secretsmanager/
+1. Open the AWS Secrets Manager [console](https://console.aws.amazon.com/secretsmanager/)
 2. Click "Store a new secret."
 3. On the "Choose Secret Type" page, select the appropriate secret type for your use case, and then click "Next."
 4. On the "Configure Secret" page, provide the necessary details for your secret, such as the key-value pairs or the plaintext value, and then click "Next."
@@ -17,9 +17,7 @@ Before you can use AWS Secrets Manager with Mage, you need to create a new secre
 
 Your new secret is now stored in AWS Secrets Manager. Make a note of the secret's ARN (Amazon Resource Name), as you'll need it to access the secret from Mage.
 
-For more detailed information on managing and storing secrets in AWS Secrets Manager, refer to the official AWS documentation:
-
-https://docs.aws.amazon.com/secretsmanager/latest/userguide/managing-secrets.html
+For more detailed information on managing and storing secrets in AWS Secrets Manager, refer to the official [AWS Documentation](https://docs.aws.amazon.com/secretsmanager/latest/userguide/managing-secrets.html)
 
 ### Working with Secrets in Mage
 
