[xy] Some small fixes on the docs.

--- a/docs/development/observability/logging.mdx
+++ b/docs/development/observability/logging.mdx
@@ -87,7 +87,7 @@ logging_config:
   retention_period: '15d'
 ```
 
-Then you can run command `mage clean-old-logs [project_uuid]` to clean up old logs
+Then you can run command `mage clean-old-logs [project_path]` to clean up old logs
 
 ### Block logging
 A logger is available in the block's context. You can use it to log messages to the block's log file. The logger is passed into
