--- a/docs/integrations/observability/alerting-slack.mdx
+++ b/docs/integrations/observability/alerting-slack.mdx
@@ -88,7 +88,7 @@ notification_config:
       details: >
         Failed to execute pipeline {pipeline_run_url}.
         Pipeline uuid: {pipeline_uuid}. Trigger name: {pipeline_schedule_name}.
-        Test custom message."
+        Test custom message.
     success:
       details: ...
     passed_sla:
