--- a/docs/integrations/observability/alerting-telegram.mdx
+++ b/docs/integrations/observability/alerting-telegram.mdx
@@ -94,7 +94,7 @@ notification_config:
       summary: >
         Failed to execute pipeline {pipeline_run_url}.
         Pipeline uuid: {pipeline_uuid}. Trigger name: {pipeline_schedule_name}.
-        Test custom message."
+        Test custom message.
     success:
       title: ...
       summary: ...
