--- a/docs/integrations/observability/alerting-discord.mdx
+++ b/docs/integrations/observability/alerting-discord.mdx
@@ -89,7 +89,7 @@ notification_config:
       summary: >
         Failed to execute pipeline {pipeline_run_url}.
         Pipeline uuid: {pipeline_uuid}. Trigger name: {pipeline_schedule_name}.
-        Test custom message."
+        Test custom message.
     success:
       title: ...
       summary: ...
