--- a/docs/integrations/observability/alerting-email.mdx
+++ b/docs/integrations/observability/alerting-email.mdx
@@ -74,7 +74,7 @@ notification_config:
       details: >
         Failed to execute pipeline {pipeline_run_url}.
         Pipeline uuid: {pipeline_uuid}. Trigger name: {pipeline_schedule_name}.
-        Test custom message."
+        Test custom message.
     success:
       title: ...
       details: ...
