Updated activeMQ source: added heartbeat functionality and added headers alongside the message; Updated activeMQ sink to properly receive message and headers; Updated activeMQ docs markdown file

--- a/docs/streaming/sources/activemq.mdx
+++ b/docs/streaming/sources/activemq.mdx
@@ -11,6 +11,7 @@ connection_port: 61613
 queue_name: 'default'
 username: 'admin'
 password: 'admin'
+heartbeats: [10000, 10000]
 ```
 
 Ensure that the stomp port on ActiveMQ is open, which is 61613 by default.
