[tc] Update releases.mdx

--- a/docs/about/releases.mdx
+++ b/docs/about/releases.mdx
@@ -14,6 +14,18 @@ description: "Latest new features and changelog."
 ---
 
 [All releases](https://github.com/mage-ai/mage-ai/releases)
+- [0.9.72 | House Targaryen Release](https://github.com/mage-ai/mage-ai/releases/tag/0.9.72)
+
+<iframe
+  width="560"
+  height="315"
+  src="https://www.youtube.com/embed/abiOckshzu8"
+  title="X-Men Release"
+  frameborder="0"
+  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+  allowfullscreen
+/>
+
 - [0.9.71 | X-Men Release](https://github.com/mage-ai/mage-ai/releases/tag/0.9.71)
 
 <iframe
