[tc] Update releases.mdx

--- a/docs/about/releases.mdx
+++ b/docs/about/releases.mdx
@@ -20,7 +20,7 @@ description: "Latest new features and changelog."
   width="560"
   height="315"
   src="https://www.youtube.com/embed/abiOckshzu8"
-  title="X-Men Release"
+  title="House Targaryen Release"
   frameborder="0"
   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
   allowfullscreen
