--- a/docs/production/deploying-to-cloud/using-terraform.mdx
+++ b/docs/production/deploying-to-cloud/using-terraform.mdx
@@ -58,7 +58,7 @@ Provider releases are separate from Terraform CLI releases, so not all providers
 Other versions of this provider may have different platforms supported.
 ```
 
-Follow this [guide](https://blog.sanjayhona.com.np/terraform-error-incompatible-provider-version-m1-or-darwin-arm64-fae0159f913f) to fix the issue.
+Follow this [guide](https://medium.com/@sssanjaya/terraform-error-incompatible-provider-version-m1-or-darwin-arm64-fae0159f913f) to fix the issue.
 
 ## Cloud specific Terraform instructions
 
